# FluidSim

./: Cargo.toml  LICENSE  index.html
.github/workflows/: deploy.yml
assets/: style.css
src/: fluid_simulation.rs  lib.rs  web.rs
